<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lavender"
    tools:context=".ArtikelActivity">



    <androidx.core.widget.NestedScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/ScrollView"
        app:layout_anchorGravity="top|center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lavender"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="1. Baju"
                        android:id="@+id/ar1"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppinsextra"
                        android:textSize="17sp"/>

                    <ImageView
                        android:layout_width="364dp"
                        android:layout_height="226dp"
                        android:src="@drawable/pagebkg" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/artikel_sampah"
                        android:fontFamily="@font/poppinsregular"
                        android:textSize="17sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="2. Celana"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppinsextra"
                        android:textSize="17sp"/>
                    <ImageView
                        android:layout_width="364dp"
                        android:layout_height="226dp"
                        android:src="@drawable/pagebkg" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/artikel1"
                        android:fontFamily="@font/poppinsregular"
                        android:textSize="17sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="3. Jas"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppinsextra"
                        android:textSize="17sp"/>
                    <ImageView
                        android:layout_width="364dp"
                        android:layout_height="226dp"
                        android:src="@drawable/pagebkg" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/ar2"
                        android:fontFamily="@font/poppinsregular"
                        android:textSize="17sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="4. Karpet "
                        android:textStyle="bold"
                        android:fontFamily="@font/poppinsextra"
                        android:textSize="17sp"/>
                    <ImageView
                        android:layout_width="364dp"
                        android:layout_height="226dp"
                        android:src="@drawable/pagebkg" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/poppinsregular"
                        android:text="@string/ar3"
                        android:textSize="17sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="5. Selimut "
                        android:textStyle="bold"
                        android:fontFamily="@font/poppinsextra"
                        android:textSize="17sp"/>
                    <ImageView
                        android:layout_width="364dp"
                        android:layout_height="226dp"
                        android:src="@drawable/pagebkg" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/poppinsregular"
                        android:text="@string/ar4"
                        android:textSize="17sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bottom_bacground"
            android:elevation="2dp"
            app:itemIconSize="30dp"
            app:itemIconTint="@drawable/selector"
            app:itemRippleColor="@android:color/transparent"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/bottom_nav_menu" />
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>